--- a/app/src/main/res/layout/activity_oclock.xml
+++ b/app/src/main/res/layout/activity_oclock.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ocbg"
-    tools:context="com.chaos.chaoscompass.OclockActivity">
-    <com.chaos.chaoscompass.OclockView
+    tools:context="com.chaos.chaoscompass.activity.OclockActivity">
+    <com.chaos.chaoscompass.utils.OclockView
         android:background="@color/ocbg"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
