--- a/app/src/main/res/layout/fragment_compass.xml
+++ b/app/src/main/res/layout/fragment_compass.xml
@@ -8,21 +8,27 @@
         android:id="@+id/compassPane"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
         tools:context="com.chaos.chaoscompass.activity.CompassActivity">
 
         <com.chaos.chaoscompass.utils.CapturePreview
             android:id="@+id/cameraPreview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/camera_mask"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@android:color/black"
+            android:contentDescription="@null" />
 
         <com.chaos.chaoscompass.views.ChaosCompassView
             android:id="@+id/chaosCompassView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="@color/black" />
+            android:visibility="visible" />
 
     </RelativeLayout>
 
