--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,4 +47,10 @@
     <color name="activity_bg">#F1F4F9</color>
     <color name="icons_default_color">#805F6368</color>
 
+    <color name="compass_foreground_color">#2f2f37</color>
+    <color name="compass_background_color">#1e1d23</color>
+    <color name="compass_text_secondary_color">#c0bfc5</color>
+    <color name="compass_text_primary_color">#ffffff</color>
+    <color name="compass_accent_color">#03a9f4</color>
+
 </resources>
