--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_bg"
-    tools:context="com.chaos.chaoscompass.MainActivity2">
+    tools:context="com.chaos.chaoscompass.activity.MainActivity">
 
     <View
         android:id="@+id/appBar"
